k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-minikube
  labels:
    env: k8s-in-docker
