k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-minikube-service
  namespace: echo-minikube
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: echo-minikube
